test/haskell2010/conformance/negative/misindented-where-keyword.hs
module Main where

main =
  x
where
  x = 1
